sd and variance

--- a/Statistics/Standard Deviation and Variance.ipynb
+++ b/Statistics/Standard Deviation and Variance.ipynb
@@ -321,6 +321,16 @@
     "print(f\"Mean is {mean}:\")\n",
     "print(f\"Variance is {x}: \")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other references:\n",
+    "https://www.youtube.com/watch?v=1E7NU-uWalY - Krish Naik\n",
+    "\n",
+    "https://www.youtube.com/watch?v=SzZ6GpcfoQY - Josh Starmer"
+   ]
   }
  ],
  "metadata": {
