sd and variance

--- a/Statistics/Standard Deviation and Variance.ipynb
+++ b/Statistics/Standard Deviation and Variance.ipynb
@@ -183,6 +183,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### How standard deviation and variance is used in Machine Learning?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Using this metric to calculate the variability of a population or sample is a crucial test of a machine learning model’s accuracy against real world data.\n",
+    "\n",
+    "- Standard deviation can be used to measure confidence in a model’s statistical conclusions.\n",
+    "\n",
+    "- Standard deviation is an excellent way to identify outliers. Data points that lie more than one standard deviation from the mean can be considered unusual. In many cases, data points that are more than two standard deviations away from the mean are not considered in the analysis. We can talk about how extreme a data point is by asking the question “how many sigmas away from the mean is this?”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
