sd and variance

--- a/Statistics/Standard Deviation and Variance.ipynb
+++ b/Statistics/Standard Deviation and Variance.ipynb
@@ -336,6 +336,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is the test sans-serif rendering font for jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Other references:\n",
     "https://www.youtube.com/watch?v=1E7NU-uWalY - Krish Naik\n",
     "\n",
