mean median mode

--- a/Statistics/Mean Median Mode/MMM.ipynb
+++ b/Statistics/Mean Median Mode/MMM.ipynb
@@ -148,6 +148,14 @@
    "source": [
     "Note that mode function returns a array of the most frequent number along with how many times it has repeated"
    ]
+  },
+  {
+   "source": [
+    "Other References:\n",
+    "- https://www.youtube.com/watch?v=GvftKv9uctk"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
