--- a/Statistics/PDF and CDF/PDF.ipynb
+++ b/Statistics/PDF and CDF/PDF.ipynb
@@ -95,8 +95,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other references:\n",
-    "- https://www.youtube.com/watch?v=PYIjkw0HN1Q - Krish Naik"
+    "## Other references:\n",
+    "- https://www.youtube.com/watch?v=PYIjkw0HN1Q - Krish Naik\n",
+    "\n",
+    "Check out CDF explanation [here]() (with code)"
    ]
   }
  ],
