--- a/Statistics/PDF and CDF/PDF.ipynb
+++ b/Statistics/PDF and CDF/PDF.ipynb
@@ -98,7 +98,7 @@
     "## Other references:\n",
     "- https://www.youtube.com/watch?v=PYIjkw0HN1Q - Krish Naik\n",
     "\n",
-    "Check out CDF explanation [here]() (with code)"
+    "#### Check out CDF explanation [here](https://github.com/Gladiator07/Machine-Learning-Complete/blob/master/Statistics/PDF%20and%20CDF/CDF.ipynb) (with code)"
    ]
   }
  ],
