Soft Margin Classifier

--- a/Support Vector Machine/1.Maximal Margin Classifier.ipynb
+++ b/Support Vector Machine/1.Maximal Margin Classifier.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "A hyperplane is a line that splits the input variable space. In SVM, a hyperplane is selected to best separate the points in the input variable space by their class, either class 0 or class 1. In two-dimensions you can visualize this as a line and in a 3D space a hyperplane can be visualized as a flat plane.\n",
-    "and let’s assume that all of our input points can be completely separated by this line. So mathematically a hyperplace equation of a 2D space would look like this:"
+    "and let’s assume that all of our input points can be completely separated by this line. So mathematically a hyperplane equation of a 2D space would look like this:"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make the aboe eqaution more generalized, we can write it as follows for p number of features (i.e. p dimensional space)"
+    "To make the above equation more generalized, we can write it as follows for p number of features (i.e. p dimensional space)"
    ]
   },
   {
@@ -209,7 +209,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But in real life dataset it is almost impossible to fit large margin to the data. So, we use a classifier called as Soft Margin Classifier which is discussed in subsequent notebook"
+    "But in real life dataset it is almost impossible to fit large margin to the data. So, we use a classifier called as Soft Margin Classifier which is discussed in \n",
+    "[subsequent notebook]()"
    ]
   }
  ],
