Soft Margin Classifier

--- a/Support Vector Machine/1.Maximal Margin Classifier.ipynb
+++ b/Support Vector Machine/1.Maximal Margin Classifier.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "source": [
     "But in real life dataset it is almost impossible to fit large margin to the data. So, we use a classifier called as Soft Margin Classifier which is discussed in \n",
-    "[subsequent notebook]()"
+    "[subsequent notebook](https://github.com/Gladiator07/Machine-Learning-Complete/blob/master/Support%20Vector%20Machine/2.Soft%20Margin%20Classifier.ipynb)"
    ]
   }
  ],
