--- a/EDA/Notebooks/EDA_wine_basic.ipynb
+++ b/EDA/Notebooks/EDA_wine_basic.ipynb
@@ -157,7 +157,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('winequality-white.csv', sep=';')\n",
+    "df = pd.read_csv('Data/winequality-white.csv', sep=';')\n",
     "df.head()"
    ]
   },
